Fixing welcome screen height and disable overflow

--- a/main-app/src/styles/config/main.scss
+++ b/main-app/src/styles/config/main.scss
@@ -30,6 +30,7 @@ $spacing-8: 2rem; // 32px
 }
 
 body {
+    overflow: hidden;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
